# partnerOSv2

./: .env.example  .gitignore  Makefile  alembic.ini  pyproject.toml  streamlit_app.py
alembic/: env.py
alembic/versions/: 20260302_0001_initial_schema.py
docs/: API_Contracts.md  Architecture_Constraints.md  Data_Model.md  Delivery_Constraints.md  IMPLEMENTATION_PLAN.md  Integration_Catalog.md  NFRs.md  PRD.md  README.md  Requirements_Spec.md  Security_Model.md  User_Flows.md
src/partner_os_v2/: config.py  db.py  domain.py  models.py  schemas.py  security.py
src/partner_os_v2/api/: deps.py  errors.py  main.py
src/partner_os_v2/api/routes/: ai.py  analyses.py  auth.py  cases.py  deals.py  documents.py  health.py  leads.py  timeline.py
src/partner_os_v2/prompts/: registry.py
src/partner_os_v2/services/: ai_gateway.py  audit.py  auth.py  workflow.py
tests/: conftest.py  test_api_contract.py  test_degraded_mode.py  test_endpoint_error_contracts.py  test_high_risk_gate.py  test_lead_workflow.py  test_startup_smoke.py
