[project]
name = "partner-os-v2"
version = "0.1.0"
description = "AI-first internal operating system for real-estate workflows"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "fastapi>=0.115,<1",
  "itsdangerous>=2.2,<3",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.6,<3",
  "python-dotenv>=1.0,<2",
  "requests>=2.32,<3",
  "sqlalchemy>=2.0,<3",
  "streamlit>=1.42,<2",
  "uvicorn>=0.34,<1"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
